add SQS dependency

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-sqs -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-sqs</artifactId>
+			<version>1.12.778</version>
+		</dependency>
 	</dependencies>
 
 	<build>
